[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/ModelScenes/pistol_tauros.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SupportScenes/Weapon.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/Weapon/reload.ogg" type="AudioStream" id=3]
[ext_resource path="res://Resources/Audio/Weapon/fire.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Reload"
length = 2.6
tracks/0/type = "transform"
tracks/0/path = NodePath("pistol_tauros")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("pistol_tauros:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2.79397e-09, -0.0184689, -0.00919497 ), Vector3( 3.72529e-09, -0.0260283, -0.0125626 ), Vector3( 5.58794e-09, -0.0354958, -0.0171402 ), Vector3( 2.79397e-09, -0.0184689, -0.00919497 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pistol_tauros:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -90, 0 ), Vector3( 2.1e-06, -90, -13.001 ), Vector3( 5.66729e-06, -90, -37.1291 ), Vector3( 0, -90, 0 ) ]
}
tracks/3/type = "transform"
tracks/3/path = NodePath("pistol_tauros/Círculo_017")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = PoolRealArray(  )
tracks/4/type = "value"
tracks/4/path = NodePath("pistol_tauros/Círculo_017:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.4, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 8.94184, 16.5373, 7.15256e-07 ), Vector3( 8.10742, 16.4922, 0 ), Vector3( 8.94184, 16.5373, 7.15256e-07 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 0.6
tracks/0/type = "transform"
tracks/0/path = NodePath("pistol_tauros/Círculo_017")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("pistol_tauros/Círculo_017:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 9.31017, 16.5373, 0 ), Vector3( 7.71582, 16.5373, 0 ), Vector3( 8.94184, 16.5373, 7.15256e-07 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pistol_tauros:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2.79397e-09, -0.0184689, -0.00919497 ), Vector3( 3.72529e-09, -0.0184689, -0.0146989 ), Vector3( 2.79397e-09, -0.0184689, -0.00919497 ) ]
}

[node name="Weapon" type="MeshInstance"]
transform = Transform( -10, 0, -3.25841e-06, 0, 10, 0, 3.25841e-06, 0, -10, 0.068, -0.031, -0.219 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Reload = SubResource( 2 )
anims/Shoot = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.7
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="Reload" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="pistol_tauros" parent="." instance=ExtResource( 1 )]
transform = Transform( -8.74228e-11, 0, -0.002, 0, 0.002, 0, 0.002, 0, -8.74228e-11, 2.79397e-09, -0.0184689, -0.00919497 )

[node name="Círculo_017" parent="pistol_tauros" index="4"]
transform = Transform( 0.104586, 7.10543e-15, -2.11758e-22, 0, -4.57159e-09, -0.104586, -7.10543e-15, 0.104586, -4.57159e-09, 8.94184, 16.5373, 7.15256e-07 )
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]

[editable path="pistol_tauros"]
